APT対応の修正